# basic-ai-reasoning-agent-with-local-llm

./: LICENCE  README.markdown  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: .gitignore
app/config/: app_config.yaml  logging.yaml
app/scripts/: setup.sh
app/src/: main.py
app/src/agents/: reasoner.py  retriever.py  supervisor.py
app/src/graph/: workflow.py
app/src/models/: state.py
app/src/tools/: file_reader.py  text_chunker.py
app/tests/: test_llm_integration.py  test_tools.py  test_workflow.py
documents/: api_reference.md  architecture.md
